--- a/AgeOfLaika/Base.lproj/Main.storyboard
+++ b/AgeOfLaika/Base.lproj/Main.storyboard
@@ -61,6 +61,18 @@
                                     <rect key="frame" x="136" y="20" width="92" height="45"/>
                                 </variation>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X0n-Sm-phw">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Convert to REAL Dog Years">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="161" width="296" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="convertToRealDogYearsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="I5j-zy-uxk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -70,6 +82,7 @@
                                 <exclude reference="sM4-4U-8Mh"/>
                                 <exclude reference="GD4-Oe-SPI"/>
                                 <exclude reference="9QJ-Z6-MfE"/>
+                                <exclude reference="X0n-Sm-phw"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -79,6 +92,7 @@
                                 <include reference="sM4-4U-8Mh"/>
                                 <include reference="GD4-Oe-SPI"/>
                                 <include reference="9QJ-Z6-MfE"/>
+                                <include reference="X0n-Sm-phw"/>
                             </mask>
                         </variation>
                     </view>
